err/housekeeper.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_Alchy-0.5.0.dist-info'...
Listing './lib/python3.5/site-packages/Flask_Cors-3.0.3.dist-info'...
Listing './lib/python3.5/site-packages/Flask_SQLAlchemy-2.3.2.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/SQLAlchemy-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/alchy'...
Listing './lib/python3.5/site-packages/alchy-2.2.2.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/coloredlogs'...
Listing './lib/python3.5/site-packages/coloredlogs-8.0.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_cors'...
Listing './lib/python3.5/site-packages/flask_sqlalchemy'...
Listing './lib/python3.5/site-packages/housekeeper'...
Listing './lib/python3.5/site-packages/housekeeper/add'...
Compiling './lib/python3.5/site-packages/housekeeper/add/core.py'...
***   File "./lib/python3.5/site-packages/housekeeper/add/core.py", line 31
    log.debug(f"adding file: {file_data['path']}")
                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/housekeeper/archive'...
Listing './lib/python3.5/site-packages/housekeeper/cli'...
Compiling './lib/python3.5/site-packages/housekeeper/cli/add.py'...
***   File "./lib/python3.5/site-packages/housekeeper/cli/add.py", line 30
    click.echo(click.style(f"new bundle added: {new_bundle.name} ({new_bundle.id})", fg='green'))
                                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/housekeeper/cli/init.py'...
***   File "./lib/python3.5/site-packages/housekeeper/cli/init.py", line 17
    message = f"Delete existing tables? [{', '.join(existing_tables)}]"
                                                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/housekeeper/compile'...
Listing './lib/python3.5/site-packages/housekeeper/deliver'...
Compiling './lib/python3.5/site-packages/housekeeper/include.py'...
***   File "./lib/python3.5/site-packages/housekeeper/include.py", line 18
    raise VersionIncludedError(f"version included on {version_obj.included_at}")
                                                                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/housekeeper/pipelines'...
Listing './lib/python3.5/site-packages/housekeeper/pipelines/general'...
Listing './lib/python3.5/site-packages/housekeeper/pipelines/mip'...
Listing './lib/python3.5/site-packages/housekeeper/pipelines/mip2'...
Listing './lib/python3.5/site-packages/housekeeper/pipelines/mip38'...
Listing './lib/python3.5/site-packages/housekeeper/pipelines/mip4'...
Listing './lib/python3.5/site-packages/housekeeper/pipelines/miparchive'...
Listing './lib/python3.5/site-packages/housekeeper/pipelines/references'...
Listing './lib/python3.5/site-packages/housekeeper/scripts'...
Listing './lib/python3.5/site-packages/housekeeper/server'...
Compiling './lib/python3.5/site-packages/housekeeper/server/app.py'...
***   File "./lib/python3.5/site-packages/housekeeper/server/app.py", line 32
    return f"Welcome to {housekeeper.__title__} REST API"
                                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/housekeeper/store'...
Listing './lib/python3.5/site-packages/housekeeper-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/housekeeperold'...
Listing './lib/python3.5/site-packages/housekeeperold/archive'...
Listing './lib/python3.5/site-packages/housekeeperold/compile'...
Listing './lib/python3.5/site-packages/housekeeperold/deliver'...
Listing './lib/python3.5/site-packages/housekeeperold/pipelines'...
Listing './lib/python3.5/site-packages/housekeeperold/pipelines/general'...
Listing './lib/python3.5/site-packages/housekeeperold/pipelines/mip'...
Listing './lib/python3.5/site-packages/housekeeperold/pipelines/mip2'...
Listing './lib/python3.5/site-packages/housekeeperold/pipelines/mip4'...
Listing './lib/python3.5/site-packages/housekeeperold/pipelines/miparchive'...
Listing './lib/python3.5/site-packages/housekeeperold/server'...
Listing './lib/python3.5/site-packages/housekeeperold/store'...
Listing './lib/python3.5/site-packages/humanfriendly'...
Listing './lib/python3.5/site-packages/humanfriendly-4.6.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/marshmallow'...
Listing './lib/python3.5/site-packages/marshmallow-2.15.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pydash'...
Listing './lib/python3.5/site-packages/pydash-4.3.1.dist-info'...
Listing './lib/python3.5/site-packages/ruamel'...
Listing './lib/python3.5/site-packages/ruamel/yaml'...
Listing './lib/python3.5/site-packages/ruamel.yaml-0.15.35.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/event'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext/declarative'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/plugin'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/suite'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
